--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,24 @@
-== README
+== BETA
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
-
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
+== Dinner Assister
+This is a recipe application to help plan your meals. 
 
 
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+* Ruby version: 2.2
+* Rails: 4.2.1
+
+## Set up
+### Database
+Set up your database.yml file. I am using postgres.
+
+### Omniauth - Optional
+App allows user to create an account with their email. However, you can add omniauth by adding the client key and secret to `config/devise.rb`.
+Example:
+`config.omniauth :google_oauth2, 'key', 'secret'`
+
+### Mailer - Optional
+I use mailer to send password reset or unlock account. You should set it up in development.rb.
+
+## Running test
+`rake` runs all the test.
+This project is currently using rspec and cabybara. I believe in writing enough test that will let you sleep at night and have confidence when you ship the applicaiton, but not too much that it becomes a nighmare to maintain.
